force-app/main/default/objects/SocketMessage__e/SocketMessage__e.object-meta.xml
<CustomObject>
    <label>Socket Message</label>
    <pluralLabel>Socket Messages</pluralLabel>
</CustomObject>