force-app/main/default/objects/SocketMessage__e/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Can be used as a short description of the message</description>
    <label>Description</label>
    <length>150</length>
    <type>Text</type>
</CustomField>