force-app/main/default/objects/SocketMessage__e/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>External ID (if available), can be used to match records in external systems with records in UI</description>
    <label>External Id</label>
    <length>150</length>
    <type>Text</type>
</CustomField>