force-app/main/default/objects/SocketMessage__e/fields/FieldAPINames__c.field-meta.xml
<CustomField>
    <fullName>FieldAPINames__c</fullName>
    <description>Can be used to provide a list of comma separated field API names, for dynamic SOQL, or other uses.</description>
    <label>Field API Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>