force-app/main/default/objects/SocketMessage__e/fields/Heading__c.field-meta.xml
<CustomField>
    <fullName>Heading__c</fullName>
    <description>Can be used to group messages (e.g. a common category), provide a title or header</description>
    <label>Heading</label>
    <length>150</length>
    <type>Text</type>
</CustomField>