force-app/main/default/objects/SocketMessage__e/fields/ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>ObjectAPIName__c</fullName>
    <description>Can be used to specify the API name of record in the message (e.g. Account, Case, MyObject__c)</description>
    <label>Object API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>