force-app/main/default/objects/SocketMessage__e/fields/SalesforceId__c.field-meta.xml
<CustomField>
    <fullName>SalesforceId__c</fullName>
    <description>Can be used to store a Salesforce record id</description>
    <label>Salesforce Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>