force-app/main/default/objects/SocketMessage__e/fields/SecondaryPayload__c.field-meta.xml
<CustomField>
    <fullName>SecondaryPayload__c</fullName>
    <description>Can be used to store a payload in text form (e.g. a JSON object) up to 131,072 characters.</description>
    <label>Secondary Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>