force-app/main/default/objects/SocketMessage__e/fields/SubmittedBy__c.field-meta.xml
<CustomField>
    <fullName>SubmittedBy__c</fullName>
    <description>Can be used to store a user id, for the person who initiated the message.</description>
    <label>Submitted By</label>
    <length>18</length>
    <type>Text</type>
</CustomField>